--- a/views/partials/edit_form.ejs
+++ b/views/partials/edit_form.ejs
@@ -5,23 +5,23 @@
 
   <div class="form-group">
     <label for="title">Title</label>
-    <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title" value="<%= game.title %>">
+    <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title" value="<%= game.title %>" required>
   </div>
 
   <div class="form-group">
       <label for="address" class="col-form-label">Address</label>
-      <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address" value="<%= game.address%>">
+      <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address" value="<%= game.address%>" required>
   </div>
 
   <div class="form-group">
       <label for="zip" class= "col-form-label">ZIP</label>
-      <input type="text" class="form-control form-control-sm" name="zip" value="<%= game.zip %>"  pattern="[0-9]{5}" title="Five digit zip">
+      <input type="text" class="form-control form-control-sm" name="zip" value="<%= game.zip %>"  pattern="[0-9]{5}" title="Five digit zip" required>
   </div>
 
 
   <div class="form-group">
     <label for="locationType"> Location Type </label>
-        <select class="custom-select d-inline-block edit-select" id="locationType" name="locationType" data-gameselect="<%= game.locationType %>">
+        <select class="custom-select d-inline-block edit-select" id="locationType" name="locationType" data-gameselect="<%= game.locationType %>" required>
           <option value="buisness">Buisness</option>
           <option value="home">Home</option>
         </select>
