--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGdCjLNhY1u1ZQhXOHhVgTewhOyj71OuU&libraries=places&callback=initMap" async defer></script>
     <script src="/javascript/script.js"></script>
+    <script src="/javascript/maps.js"></script> 
 
   </body>
 </html>
