work with geocoding on maps

--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -5,5 +5,5 @@
 
 <div id="map-search float-left">
   <input type="search" id="map-search" placeholder="Find a Game..">
-  <button class="btn btn-primary" onclick="codeAdress();"> Search </button>
+  <button class="btn btn-primary" onclick="searchAddress();"> Search </button>
 </div>
