work on schema update

--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -21,8 +21,8 @@
   <div class="form-group">
     <label for="locationType"> Location Type </label>
         <select class="custom-select d-inline-block" id="locationType" name="locationType">
-          <option value="novice">Buisness</option>
-          <option value="experienced">Home</option>
+          <option value="buisness">Buisness</option>
+          <option value="home">Home</option>
         </select>
   </div>
 
