updating map search

--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -4,6 +4,6 @@
 </div>
 
 <div id="map-search float-left">
-  <input type="search" id="map-search" placeholder="Find a Game..">
-  <button class="btn btn-primary" onclick="searchAddress();"> Search </button>
+  <input type="search" id="map-search" placeholder="Find a Game.." name="searchZip">
+  <button class="btn btn-primary"> Search </button>
 </div>
