--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -16,3 +16,7 @@
     <button class="btn btn-primary" type="submit"> Search </button>
   </form>
 </div>
+
+<% if (games.length > 0) { %>
+    <h1> howdy there this is a test </h1> 
+<% } %>
