update packages and api keys

--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -16,3 +16,9 @@
     <button class="btn btn-primary" type="submit" id="submit"> Search </button>
   </form>
 </div>
+
+
+<% if(games.length > 0) { %>
+  <p>   <%= games[0].title %>  </p>
+
+<% } %>
