new test route for ajax

--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -4,17 +4,17 @@
 </div>
 
 <div id="map-search float-left">
-  <form action="/games/map" method="post">
-    <input type="search" id="map-search" placeholder="Find a Game.." name="searchZip">
+  <!-- <form action="/games/map" method="post"> -->
+    <!-- <input type="search" id="map-search" placeholder="Find a Game.." name="searchZip">
     <label for="radius"> Radius </label>
     <select class="custom-select d-inline-block" id="radius" name="radius">
       <option value="5" >5 miles</option>
       <option value="10">10 miles</option>
       <option value="15">15 miles </option>
       <option value="20">20 miles </option>
-    </select>
+    </select> -->
     <button class="btn btn-primary submit" type="submit" id="submit"> Search </button>
-  </form>
+  <!-- </form> -->
 </div>
 
 
