--- a/views/index/test.ejs
+++ b/views/index/test.ejs
@@ -1,5 +1,6 @@
+
+
 <h1> This is a test page </h1>
 
-<form action="/games/test" method="post">
-  <button type="submit"> go </button>
-</form> 
+
+ <div id="select_div"><a href="#" id="select_link">Test</a></div> 
