--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -4,7 +4,7 @@
 </div>
 
 <div id="map-search float-left">
-  <form action="/games/map" method="post">
+  <!-- <form action="/games/map" method="post"> -->
     <input type="search" id="map-search" placeholder="Find a Game.." name="searchZip">
     <label for="radius"> Radius </label>
     <select class="custom-select d-inline-block" id="radius" name="radius">
@@ -13,8 +13,8 @@
       <option value="15">15 miles </option>
       <option value="20">20 miles </option>
     </select>
-    <button class="btn btn-primary submit" type="submit" id="submit"> Search </button>
-  </form>
+    <button class="btn btn-primary submit" type="submit" id="submit" onclick="geocodeAddress();"> Search </button>
+  <!-- </form> -->
 </div>
 
 
