--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -13,7 +13,7 @@
       <option value="15">15 miles </option>
       <option value="20">20 miles </option>
     </select>
-    <button class="btn btn-primary submit" type="submit" id="submit" onclick="geocodeAddress();"> Search </button>
+    <button class="btn btn-primary submit" type="submit" id="submit" > Search </button>
   <!-- </form> -->
 </div>
 
