reorganize file tree

--- a/views/games/find_map.ejs
+++ b/views/games/find_map.ejs
@@ -1,11 +1,11 @@
-<h1> Google Map Test </h1>
+
 
 <div id="map">
 </div>
 
 <div id="map-search float-left">
-  <!-- <form action="/games/map" method="post"> -->
-    <input type="search" id="map-search" placeholder="Find a Game.." name="searchZip" required>
+  <form class="form-control">
+    <input type="search" id="map-search" class=" form-control" placeholder="Enter An Address Or Zipcode..." name="searchZip" required>
     <label for="radius"> Radius </label>
     <select class="custom-select d-inline-block" id="radius" name="radius">
       <option value="5">5 miles</option>
@@ -13,8 +13,8 @@
       <option value="15">15 miles </option>
       <option value="20">20 miles </option>
     </select>
-    <button class="btn btn-primary submit" type="submit" id="submit" > Search </button>
-  <!-- </form> -->
+    <button class="btn btn-primary submit mt-2 type="submit" id="submit" > Search </button>
+  </form>
 </div>
 
 
