update navbar, add invalid attribute catch

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,8 +12,12 @@
         <a class="nav-link" href="/games/add"><i class="fas fa-user-plus"></i> Host A Game </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about"> About </a>
+        <a class="nav-link" href="/games/map"><i class="fas fa-map-marker-alt"></i> Find A Game </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about"><i class="fas fa-book"></i> About </a>
+      </li>
+
       <% if (user) { %>
         <li class="nav-item">
           <a class="nav-link" href="/users/dashboard"><i class="far fa-address-book"></i> Dashboard </a>
