--- a/views/games/find_map.ejs
+++ b/views/games/find_map.ejs
@@ -3,19 +3,25 @@
 <div id="map">
 </div>
 
-<div id="map-search float-left">
-  <form class="form-control">
+
+
+<form class="form-control">
     <input type="search" id="map-search" class=" form-control" placeholder="Enter An Address Or Zipcode..." name="searchZip" required>
-    <label for="radius"> Radius </label>
-    <select class="custom-select d-inline-block" id="radius" name="radius">
-      <option value="5">5 miles</option>
-      <option value="10">10 miles</option>
-      <option value="15">15 miles </option>
-      <option value="20">20 miles </option>
-    </select>
-    <button class="btn btn-primary submit mt-2 type="submit" id="submit" > Search </button>
-  </form>
-</div>
+
+    <div class="form-group mt-2">
+      <label for="radius"> Search Radius </label>
+        <select class="custom-select d-inline-block" id="radius" name="radius">
+          <option value="5">5 miles</option>
+          <option value="10">10 miles</option>
+          <option value="15">15 miles </option>
+          <option value="20">20 miles </option>
+        </select>
+      </div>
+
+    <button class="btn btn-primary submit mt-2" type="submit" id="submit"> Search </button>
+</form>
+
+
 
 
 <script src="/javascript/maps.js"></script>
