--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -7,7 +7,7 @@
       <div class="card-body">
         <h5 class="card-title"> No Games Added Yet! </h5>
         <p class="card-text">Add some games to see games listed here instead of this dumb message </p>
-        <a href="games/add" class="btn btn-primary"><i class="fas fa-plus"></i>
+        <a href="/games/add" class="btn btn-primary"><i class="fas fa-plus"></i>
           Add New Game</a>
       </div>
   </div>
