fix case sensitivity issue

--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -26,7 +26,7 @@
             <div class="card card-inline border-2 border-secondary">
               <div class="card-body">
                 <h5 class="card-title"><%= game.title %> </h5>
-                <p class="card-text float-right"> <%= dateFormat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </p>
+                <p class="card-text float-right"> <%= dateformat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </p>
                 <p class="card-text"><%= truncate(game.description, 250) %> </p>
                 <% if (game.numberOfPlayers > 0) { %>
                 <p class="card-text"> Seeking <%= game.numberOfPlayers %>
