--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -8,7 +8,7 @@
     <div class="game-info  d-block">
       <h1 class="floatleft"> <%= game.title %>  </h1>
 
-      <span class="float-right"> Game Starts At: <%= dateFormat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </span>
+      <span class="float-right"> Game Starts At: <%= dateformat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </span>
 
       <p> <%= game.description %> </p>
 
