--- a/views/partials/edit_form.ejs
+++ b/views/partials/edit_form.ejs
@@ -29,7 +29,7 @@
 
   <div class="form-group">
       <label for="date" class="col-form-label"> Date </label>
-      <input type="date" class="form-control form-control-sm" name="date" value= <%= dateFormat(game.date,"yyyy-mm-dd" )%> >
+      <input type="date" class="form-control form-control-sm" name="date" value= <%= dateformat(game.date,"yyyy-mm-dd" )%> >
   </div>
 
   <div class="form-group">
