--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -78,7 +78,7 @@
              <a href="/users/profile/<%= player.playerUser.id %>" class="player-list plain-link">
                <div class="profile-image float-left">
                  <img src="<%= player.playerUser.image %>" class="img-fluid rounded-circle" ></img>
-                  <%= player.playerUser.firstName %>  <%= player.playerUser.lastName %>
+                  <span class="player-name"><%= player.playerUser.firstName %>  <%= player.playerUser.lastName %> </span>
                   <div class="rating dropdown-item d-flex" data-rating= "<%= player.playerUser.playerReviewAverage%>" data-id="<%= player.playerUser.id %>">
                   </div>
                 </div>
@@ -102,7 +102,7 @@
                     <div class="form-group">
                       <label for="playerReviewBody">Player Review: </label>
                       <textarea class="form-control" name="playerReviewBody" placeholder= "Leave feedback for your players here."> </textarea>
-                      <button class="btn btn-danger"> Submit </button>
+                      <button class="btn btn-danger mt-2"> Submit </button>
                     </div>
                   </form>
                 </div>
