--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -1,6 +1,6 @@
-<h2 class="text-center"> Add A New Game </h2>
+<h2 class="text-center"> Add Game </h2>
 
-<form action="/games" method="post">
+<form action="/games" method="post" class= justify-content-center>
 
   <div class="form-group">
     <label for="title">Title</label>
@@ -56,6 +56,7 @@
   </div>
 
 
-  <button type="submit" class="btn btn-primary m-2">Submit</button>
+      <button type="submit" class="btn btn-primary btn-block m-2">Add New Game <i class="fas fa-plus"></i> </button>
+
 
 </form>
