--- a/views/index/welcome.ejs
+++ b/views/index/welcome.ejs
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid mt-4">
   <div class="container">
     <h1 class="display-4">Find a Game </h1>
     <p class="lead"><a href="/games/add" class="plain-link">Host a game for players</a> or <a href='/games' class="plain-link"> find a game.</a></p>
