--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,8 @@
 
   <body>
 
+    <div class="hidden" id="serverInfo" data-url= "<%= apiURL %>"> </div>
+
     <%- include partials/navbar.ejs %>
     <div class="container" id="main-content">
       <%- include partials/flash_messages %>
