update find query

--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -6,7 +6,7 @@
 
 
   <div class="rating" data-rating= "<%= user.hostReviewAverage%>" data-id="<%= user.id %>">
-    <span> Host Rating: <%= user.hostReviewAverage%> </span>
+    <span> Host Rating: </span>
       <div class="stars-outer">
       <div class="<%= user.id %> stars-inner"></div>
       </div>
@@ -14,7 +14,7 @@
 
 
     <div class="rating" data-rating= "<%= user.playerReviewAverage%>" data-id="<%= user.id %>">
-      <span> Player Rating: <%= user.playerReviewAverage%> </span>
+      <span> Player Rating:  </span>
         <div class="stars-outer">
         <div class="<%= user.id %> stars-inner"></div>
         </div>
