visual updates, fix safari bug

--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -1,6 +1,6 @@
 <h2 class="text-center"> Add Game </h2>
 
-<form action="/games" method="post" class= justify-content-center>
+<form action="/games" method="post" class= "justify-content-center">
 
   <div class="form-group">
     <label for="title">Title</label>
@@ -52,11 +52,10 @@
 
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea class="form-control"  name="description" placeholder="Tell us about the game..."> </textarea>
+    <textarea class="form-control"  name="description" placeholder="Tell us about the game..."></textarea>
   </div>
 
-
-      <button type="submit" class="btn btn-primary btn-block m-2">Add New Game <i class="fas fa-plus"></i> </button>
+  <button type="submit" class="btn btn-primary btn-block text-center">Add New Game <i class="fas fa-plus"></i> </button>
 
 
 </form>
