--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -1,15 +1,15 @@
-<div class="dashboard-nav mb-3">
-  <ul class="nav nav-tabs" role="tablist">
+<div class="dashboard-nav   mb-3">
+  <ul class="nav nav-tabs responsive">
     <li class="nav-item">
-      <a class="nav-link tab" href="/users/dashboard" id="dashboard-tab"  role="tab"> Dashboard </a>
+      <a class="nav-link tab plain-link" href="/users/dashboard" id="dashboard-tab"  role="tab"> Dashboard </a>
     <li class="nav-item">
-      <a class="nav-link tab" id="hosted-tab"  href="/users/hosted"  role="tab">Hosted Games</a>
+      <a class="nav-link tab plain-link" id="hosted-tab"  href="/users/hosted"  role="tab">Hosted Games</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link tab" href="/users/played" id="played-tab"  role="tab">Played Games</a>
+      <a class="nav-link tab plain-link" href="/users/played" id="played-tab"  role="tab">Played Games</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link tab" href="/users/profile/<%= user.id %>" id="profile-tab"  role="tab">Profile</a>
+      <a class="nav-link tab plain-link" href="/users/profile/<%= user.id %>" id="profile-tab"  role="tab">Profile</a>
     </li>
 
   </ul>
