--- a/views/users/profile_edit.ejs
+++ b/views/users/profile_edit.ejs
@@ -5,9 +5,7 @@
   <input type="hidden" name="_method" value="PUT">
 
   <div class="form-group">
-    <textarea class="form-control" rows="4" name="profileDescription" placeholder="Tell us a little about yourself...">
-      <%= user.profileInfo %>
-    </textarea>
+    <textarea class="form-control" rows="4" name="profileDescription" placeholder="Tell us a little about yourself..."><%= user.profileInfo %></textarea>
   </div>
       <button class="btn btn-danger">Submit Changes</button>
 </form>
