--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -1,4 +1,4 @@
-<div class="dashboard-nav   mb-3">
+<div class="dashboard-nav text-secondary  mb-3">
   <ul class="nav nav-tabs responsive">
     <li class="nav-item">
       <a class="nav-link tab plain-link" href="/users/dashboard" id="dashboard-tab"  role="tab"> Dashboard </a>
