--- a/views/games/find_map.ejs
+++ b/views/games/find_map.ejs
@@ -25,4 +25,4 @@
 
 
 <script src="/javascript/maps.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGdCjLNhY1u1ZQhXOHhVgTewhOyj71OuU&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGdCjLNhY1u1ZQhXOHhVgTewhOyj71OuU&callback=initMap"></script>
