--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,14 @@ body {
   width: 2em;
 }
 
+.card{
+  overflow: hidden;
+}
+
+.card-block{
+     word-wrap: break-word;
+}
+
 .player-name {
   white-space: normal;
 }
