--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -1,6 +1,6 @@
 <%- include ../partials/dashboard_nav.ejs %>
 
-<h1> <%= title %>   </h1>
+<h1 class="text-center"> <%= title %>   </h1>
 
 <% if(games.length == 0) { %>
 
