--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -7,8 +7,13 @@
   <div class="col-12  bg-light">
     <div class="game-info  d-block">
       <h1 class="floatleft"> <%= game.title %>  </h1>
-
-      <span class="float-right"> Game Starts At: <%= dateformat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </span>
+      <% var date = game.date.toISOString().substring(0, 10); %>
+      <% date = date.split('-'); %>
+      <% var year = date[0]; %>
+      <% var month = date[1] - 1; %>
+      <% var day = date[2]; %>
+      <% var gameDate = new Date(year, month, day); %>
+      <span class="float-right"> Game Starts:  <%= dateformat(gameDate, "fullDate") %>  | <%= timeChange(game.startTime) %> </span>
 
       <p> <%= game.description %> </p>
 
