--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -28,12 +28,12 @@
 
   <div class="form-group">
       <label for="date" class="col-form-label"> Date </label>
-      <input type="date" class="form-control form-control-sm" name="date" required>
+      <input type="date" class="form-control" name="date" required>
   </div>
 
   <div class="form-group">
       <label for="startTime" class="col-form-label"> Start Time </label>
-      <input type="time" class="form-control form-control-sm" name="startTime" required>
+      <input type="time" class="form-control" name="startTime" required>
   </div>
 
   <div class="form-group">
