--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,19 +1,19 @@
 
 <div class="row h-100">
-
+ <!-- change order of layout here  -->
   <div class="col">
   </div>
 
   <div class="col-12  bg-light">
     <div class="game-info  d-block">
       <h1 class="floatleft"> <%= game.title %>  </h1>
-
       <% var gameDate = fromIsoDate(game.date); %>
-      <span class="float-right">  <%= dateformat(gameDate, "fullDate") %>  | <%= timeChange(game.startTime) %> </span>
-      <div class="clearfix"></div> 
+      <span class="mb-2">  <%= dateformat(gameDate, "fullDate") %>  | <%= timeChange(game.startTime) %> </span>
+      <div class="clearfix"></div>
+
       <p> <%= game.description %> </p>
 
-      <div class="profile-image float-left">
+      <div class="profile-image float-left ">
         <img src="<%= game.host.image %>" class="img-fluid rounded-circle" ></img>
       </div>
 
@@ -23,14 +23,14 @@
           </div>
       </div>
 
-    <div class="float-left">
-      <a href= "/users/profile/<%= game.host.id %>" class="plain-link">
-      <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
-      </a>
-    </div>
+      <div class="float-left">
+        <a href= "/users/profile/<%= game.host.id %>" class="plain-link">
+        <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
+        </a>
+      </div>
 
-    <div class="clearfix">
-    </div>
+      <div class="clearfix">
+      </div>
 
 
     </div>
@@ -67,8 +67,8 @@
 
 <% if(game.players.length > 0) { %>
  <!-- fix formating here so everything is on one line also fix width of elements and general look   -->
-    <div class="dropdown float-left m-2">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="playersDropdown" data-toggle="dropdown">
+    <div class="dropdown float-left">
+      <button class="btn btn-secondary dropdown-toggle m-2" type="button" id="playersDropdown" data-toggle="dropdown">
         Player List
       </button>
       <div class="dropdown-menu  dropup" aria-labelledby="dropdownMenuButton">
