fix mongoose query and add upcoming game feature

--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -7,7 +7,7 @@
   <div class="profile-image float-left">
       <img src="<%= user.image %>" class="img-fluid rounded-circle" ></img>
   </div>
-
+    <h1> <%= upcomingGame.title %> </h1> 
   <div class="float-left">
     <h3 class="align-middle"> <%= user.firstName %>  <%= user.lastName %></h3>
   </div>
